/////////////////////////////////////////////////////
// USER & ROLES
/////////////////////////////////////////////////////

Table user_roles {
  id int [pk, increment]
  role_name varchar(100) [unique, not null]
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table users {
  id int [pk, increment]
  username varchar(100) [unique, not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  role_id int [not null]
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    role_id
    is_active
  }
}

Ref: users.role_id > user_roles.id


/////////////////////////////////////////////////////
// DEPARTMENTS
/////////////////////////////////////////////////////

Table departments {
  id int [pk, increment]
  department_name varchar(100) [unique, not null]
  department_code varchar(10) [unique]
  description text
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    is_active
  }
}


/////////////////////////////////////////////////////
// PRODUCT CATEGORIES
/////////////////////////////////////////////////////

Table product_categories {
  id int [pk, increment]
  category_name varchar(100) [unique, not null]
  description text
  photo varchar(255)
  is_active boolean [default: true]
  department_id int [not null]
  created_at timestamp
  updated_at timestamp

  indexes {
    department_id
    is_active
  }
}

Ref: product_categories.department_id > departments.id


/////////////////////////////////////////////////////
// SUB CATEGORIES
/////////////////////////////////////////////////////

Table sub_categories {
  id int [pk, increment]
  category_id int [not null]
  sub_category_name varchar(100) [not null]
  description text
  photo varchar(255)
  display_order int [default: 0]
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    (category_id, sub_category_name) [unique]
    (category_id, is_active, display_order)
    display_order
  }
}

Ref: sub_categories.category_id > product_categories.id


/////////////////////////////////////////////////////
// PRODUCT GROUPS
/////////////////////////////////////////////////////

Table product_groups {
  id int [pk, increment]
  group_name varchar(100) [unique, not null]
  description text
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}


/////////////////////////////////////////////////////
// GROUP FIELDS
/////////////////////////////////////////////////////

Table group_fields {
  id int [pk, increment]
  group_id int [not null]
  field_name varchar(100) [not null]
  field_key varchar(100) [not null]
  field_type varchar(30) [not null] // text | number | textarea | boolean | dropdown
  is_required boolean [default: false]
  is_filterable boolean [default: false]
  display_order int [default: 0]
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    (group_id, field_key) [unique]
    (group_id, is_filterable)
  }
}

Ref: group_fields.group_id > product_groups.id


/////////////////////////////////////////////////////
// GROUP FIELD OPTIONS
/////////////////////////////////////////////////////

Table group_field_options {
  id int [pk, increment]
  field_id int [not null]
  option_label varchar(100) [not null]
  option_value varchar(100) [not null]
  display_order int [default: 0]

  indexes {
    (field_id, option_value) [unique]
  }
}

Ref: group_field_options.field_id > group_fields.id


/////////////////////////////////////////////////////
// PRODUCTS
/////////////////////////////////////////////////////

Table products {
  id int [pk, increment]

  product_code varchar(10) [unique, not null]
  upc_code varchar(20) [unique]
  product_name varchar(150) [not null]

  product_type varchar(20) [not null] // ENUM: Standard | Lot Matrix

  department_id int [not null]
  sub_category_id int [not null]
  group_id int [not null]

  description text
  model varchar(100)
  hsn_code varchar(8)

  unit_price decimal(12,2)
  stock_quantity int [default: 0]

  non_stock_item boolean [default: false]
  non_taxable boolean [default: false]
  item_inactive boolean [default: false]
  is_active boolean [default: true]

  created_at timestamp
  updated_at timestamp

  indexes {
    department_id
    sub_category_id
    group_id
    (is_active, item_inactive)
    product_type
  }
}

Ref: products.department_id > departments.id
Ref: products.sub_category_id > sub_categories.id
Ref: products.group_id > product_groups.id


/////////////////////////////////////////////////////
// PRODUCT GROUP FIELD VALUES
/////////////////////////////////////////////////////

Table product_group_field_values {
  id int [pk, increment]
  product_id int [not null]
  field_id int [not null]

  value_text text
  value_number decimal(12,2)
  value_boolean boolean
  value_option_id int

  created_at timestamp
  updated_at timestamp

  indexes {
    (product_id, field_id) [unique]
    field_id
  }
}

Ref: product_group_field_values.product_id > products.id
Ref: product_group_field_values.field_id > group_fields.id
Ref: product_group_field_values.value_option_id > group_field_options.id


/////////////////////////////////////////////////////
// PRODUCT MEDIA
/////////////////////////////////////////////////////

Table product_media {
  id int [pk, increment]
  product_id int [not null]
  media_url varchar(500) [not null]
  media_type varchar(20)
  display_order int
  is_primary boolean [default: false]
  file_size int
  file_name varchar(255)
  created_at timestamp
  updated_at timestamp

  indexes {
    (product_id, display_order) [unique]
    product_id
  }
}

Ref: product_media.product_id > products.id


/////////////////////////////////////////////////////
// PRODUCT PHYSICAL ATTRIBUTES (1:1)
/////////////////////////////////////////////////////

Table product_physical_attributes {
  id int [pk, increment]
  product_id int [not null, unique]
  height varchar(30)
  length varchar(30)
  width varchar(30)
  weight varchar(30)
  color varchar(30)
  created_at timestamp
  updated_at timestamp
}

Ref: product_physical_attributes.product_id > products.id


/////////////////////////////////////////////////////
// PRODUCT ZONES
/////////////////////////////////////////////////////

Table product_zones {
  id int [pk, increment]
  product_id int [not null]
  zone_name varchar(100)
  zone_code varchar(10)
  description text
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    (product_id, zone_code) [unique]
    product_id
  }
}

Ref: product_zones.product_id > products.id


/////////////////////////////////////////////////////
// PRODUCT VENDORS
/////////////////////////////////////////////////////

Table product_vendors {
  id int [pk, increment]
  product_id int [not null]
  vendor_name varchar(150) [not null]
  contact_person varchar(100)
  contact_email varchar(100)
  contact_phone varchar(20)
  gstin varchar(15)
  address text
  is_primary boolean [default: false]
  notes text
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    product_id
    (product_id, is_primary)
  }
}

Ref: product_vendors.product_id > products.id


/////////////////////////////////////////////////////
// LOT MATRIX – ATTRIBUTE DEFINITIONS
/////////////////////////////////////////////////////

Table product_attributes {
  id int [pk, increment]
  product_id int [not null]
  attribute_name varchar(50) [not null]
  attribute_code varchar(30) [not null]
  display_order int
  is_required boolean [default: true]
  is_active boolean [default: true]
  created_at timestamp

  indexes {
    product_id
    (product_id, attribute_code) [unique]
  }
}

Ref: product_attributes.product_id > products.id


/////////////////////////////////////////////////////
// LOT MATRIX – ATTRIBUTE VALUES
/////////////////////////////////////////////////////

Table product_attribute_values {
  id int [pk, increment]
  attribute_id int [not null]
  value_label varchar(50) [not null]
  value_code varchar(30) [not null]
  display_order int
  is_active boolean [default: true]
  created_at timestamp

  indexes {
    (attribute_id, value_code) [unique]
  }
}

Ref: product_attribute_values.attribute_id > product_attributes.id


/////////////////////////////////////////////////////
// LOT MATRIX – VARIANTS
/////////////////////////////////////////////////////

Table product_variants {
  id int [pk, increment]
  product_id int [not null]

  sku varchar(30) [unique, not null]
  upc varchar(30) [unique]

  combination_hash varchar(150) [unique, not null]

  cost_price decimal(12,2)
  unit_price decimal(12,2)
  sale_price decimal(12,2)

  stock_quantity int [default: 0]

  is_active boolean [default: true]
  is_deleted boolean [default: false]

  created_at timestamp
  updated_at timestamp

  indexes {
    product_id
    (product_id, is_active)
  }
}

Ref: product_variants.product_id > products.id


/////////////////////////////////////////////////////
// LOT MATRIX – VARIANT ATTRIBUTE MAPPING
/////////////////////////////////////////////////////

Table product_variant_attributes {
  variant_id int [not null]
  attribute_id int [not null]
  attribute_value_id int [not null]

  indexes {
    (variant_id, attribute_id) [unique]
  }
}

Ref: product_variant_attributes.variant_id > product_variants.id
Ref: product_variant_attributes.attribute_id > product_attributes.id
Ref: product_variant_attributes.attribute_value_id > product_attribute_values.id


/////////////////////////////////////////////////////
// LOT MATRIX – VARIANT MEDIA
/////////////////////////////////////////////////////

Table product_variant_media {
  id int [pk, increment]
  variant_id int [not null]
  media_url varchar(500) [not null]
  is_primary boolean [default: false]
  display_order int

  indexes {
    variant_id
  }
}

Ref: product_variant_media.variant_id > product_variants.id
